# ai-news-bot_LIVE

./: README.md  fixed_main.py  keywords_channel1.py  keywords_channel2.py  main.py  posted_urls.txt  pyproject.toml  requirements.txt  updated_main.py
.github/workflows/: daily.yml
