[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "feedparser>=6.0.11",
    "flask>=3.1.0",
    "googletrans>=4.0.2",
    "lxml-html-clean==0.4.1",
    "newspaper3k==0.2.8",
    "openai>=1.70.0",
    "pytelegrambotapi>=4.26.0",
    "requests>=2.32.3",
]
